Update multi CA and fixed bug in set visited for both CA and DMAS