@@ -1,5 +1,6 @@
 package multistage.garagemodel.contextaware;
 
+import java.util.ArrayList;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.Queue;
@@ -13,6 +14,7 @@ import com.github.rinde.rinsim.core.model.time.TickListener;
 import com.github.rinde.rinsim.core.model.time.TimeLapse;
 import com.github.rinde.rinsim.geom.Point;
 import com.google.common.base.Optional;
+import com.google.common.collect.Range;
 
 import multistage.Destinations;
 import multistage.State;
@@ -20,6 +22,7 @@ import multistage.result.Result;
 import routeplan.CheckPoint;
 import routeplan.ExecutablePlan;
 import routeplan.Plan;
+import routeplan.RangeEndPoint;
 import routeplan.ResourceType;
 import setting.Setting;
 
@@ -40,6 +43,9 @@ public class VehicleAgent implements TickListener, MovingRoadUser {
   /** The agv id. */
   private int agvID;
   
+  /** The current plan. */
+  private Plan currentPlan;
+  
   /** The executable plan. */
   private ExecutablePlan executablePlan;
   
@@ -52,19 +58,22 @@ public class VehicleAgent implements TickListener, MovingRoadUser {
   /** The state. */
   private State state;
   
-  /** The setting. */
-  private Setting setting;
-  
   private LinkedList<Point> destinations;
   
-  private Result result;
+  private Setting setting;
   
-  private int reachedDestinations = 0;
+  private Result result;
   
   private List<Point> garageList;
   
   private Point garage;
+  
+  private int reachedDestinations = 0;
 
+  private boolean isFreezing;
+  
+  private boolean propagatedDelay;
+  
   public VehicleAgent(Destinations destinationList, VirtualEnvironment virtualEnvironment,
       int agvID, List<Point> garageList, Setting setting, Result result) {
     roadModel = Optional.absent();
@@ -79,6 +88,8 @@ public class VehicleAgent implements TickListener, MovingRoadUser {
     this.setting = setting;
     this.destinations = new LinkedList<>();
     this.result = result;
+    this.propagatedDelay = false;
+    this.isFreezing = false;
   }
 
   @Override
@@ -93,7 +104,7 @@ public class VehicleAgent implements TickListener, MovingRoadUser {
     return setting.getVehicleSpeed();
   }
 
-  void nextDestination(long startTime) {
+  void nextDestination(long currentTime) {
     
     destinations = new LinkedList<>();
     for (int i = 0; i < setting.getNumOfDestsForEachAGV(); i++) {
@@ -101,104 +112,144 @@ public class VehicleAgent implements TickListener, MovingRoadUser {
     }
     destinations.addLast(garage);
     
-    Plan plan = virtualEnvironment.exploreRoute(agvID, startTime,
+    Plan plan = virtualEnvironment.exploreRoute(agvID, Range.atLeast(currentTime),
         roadModel.get().getPosition(this), destinations, garageList);
+    
     executablePlan = new ExecutablePlan(plan, setting);
+    currentPlan = plan;
     path = new LinkedList<>(executablePlan.getPath());
     checkPoints = new LinkedList<>(executablePlan.getCheckPoints());
-    virtualEnvironment.makeReservation(agvID, plan, startTime, plan.getArrivalTime());
-//    System.out.println(plan.getArrivalTime());
+    virtualEnvironment.makeReservation(agvID, currentPlan, currentTime, setting.getEndTime());
   }
 
   @Override
   public void tick(TimeLapse timeLapse) {
     
+    final long currentTime = timeLapse.getStartTime();
+    
     if (state == State.ACTIVE
         && roadModel.get().getPosition(this).equals(garage)
         && path.size() == 1) {
-      // if the agv reaches the entrance of the station, then it becomes idle
-      // and will try to move to the exit of the station
+      // if the agv reaches the entrance of the garage, then it becomes idle
+      // and will try to move into the garage
       state = State.IDLE;
     } else if (state == State.IDLE) {
-      // of the agv reaches the exit of the station, then it becomes active
+      // if the agv reached the garage, then it becomes active
       state = State.ACTIVE;
       nextDestination(timeLapse.getEndTime());
+    }
+    
+    if (!currentPlan.getIntervals().isEmpty() && timeLapse
+        .getEndTime() >= currentPlan.getIntervals().get(0).upperEndpoint()) {
+      final long endTime = currentPlan.getIntervals().get(0).upperEndpoint();
+      final List<Point> resource = new ArrayList<>();
+      if (currentPlan.getIntervals().size() % 2 == 1) {
+        // first plan step is for a node
+        resource.add(currentPlan.getPath().get(0));
+        virtualEnvironment.setVisited(agvID, resource, endTime);
+      } else {
+        // first plan step is for an edge
+        resource.add(currentPlan.getPath().get(0));
+        resource.add(currentPlan.getPath().get(1));
+        virtualEnvironment.setVisited(agvID, resource, endTime);
+      }
+      currentPlan.removeFirstStep();
     }
     
     final Point currentPos = roadModel.get().getPosition(this);
     final Point roundedPos = new Point(round(currentPos.x), round(currentPos.y));
     
-    if (agvID == 5 && timeLapse.getStartTime() < 100000
-        && timeLapse.getStartTime() > 5000
-        && checkPoints.getFirst().getPoint().equals(roundedPos)) {
-      return;
+    if (agvID == 3) {
+      if (currentTime > 15000 && currentTime < 100000) {
+        isFreezing = true;
+      } else {
+        if (isFreezing) {
+          isFreezing = false;
+          propagatedDelay = false;
+        }
+      }
     }
     
-    if (agvID == 7 && timeLapse.getStartTime() < 110000
-        && timeLapse.getStartTime() > 20000
-        && checkPoints.getFirst().getPoint().equals(roundedPos)) {
+    if (agvID == 7) {
+      if (currentTime > 30000 && currentTime < 120000) {
+        isFreezing = true;
+      } else {
+        if (isFreezing) {
+          isFreezing = false;
+          propagatedDelay = false;
+        }
+      }
+    }
+    
+    if (isFreezing && roundedPos.equals(checkPoints.getFirst().getPoint()) && propagatedDelay) {
       return;
     }
     
     if (state == State.ACTIVE) {
+      // if not idle
       // IDEA: check the position. If right before it leaves an edge or a node,
       // it still have to wait, then consume time
       if (!checkPoints.isEmpty()
           && roundedPos.equals(checkPoints.getFirst().getPoint())) {
-        // if the AGV is at exactly the check point
-
-        // if the check point is a node then announce to both the node and the
-        // next edge that it has visited
-        if (checkPoints.getFirst().getResourceType() == ResourceType.NODE) {
-          virtualEnvironment.setVisited(agvID, checkPoints.getFirst());
-          virtualEnvironment.setVisited(agvID, checkPoints.get(1));
-        }
-
-     // check if it is time to move according to the plan
-        if (timeLapse.getStartTime() < checkPoints.getFirst().getExpectedTime()) {
-          // if it hasn't been the start time yet
-          // the amount of time left to the start time
-          final long timeDifference = checkPoints.getFirst().getExpectedTime()
-              - timeLapse.getStartTime();
-          // if the amount of time left to the start time is smaller than or equal to the time left of this tick
-          if (timeDifference <= timeLapse.getTimeLeft()) {
-            // consume the amount of time left to start time
-            timeLapse.consume(timeDifference);
-            if (isSafeToMove(false)) {
-              // if there is no higher priority delayed AGVs
+        
+        if (currentTime < checkPoints.getFirst().getExpectedTime()) {
+          if (noHigherPriorityAGVs(checkPoints.getFirst().getExpectedTime(),
+              checkPoints.get(1).getResource()) && nextResourceIsFree(checkPoints.get(1))) {
+            // remove the first step of the plan
+            if (checkPoints.getFirst().getResourceType() == ResourceType.NODE) {
+              // if is currently at a node
+              final long timeToLeaveNodeFromCheckPoint = (long) (setting
+                  .getVehicleLength()* 1000 / setting.getVehicleSpeed());
+              final Range<Long> newFirstInterval = Range.closed(currentPlan.getIntervals().get(0).lowerEndpoint(),
+                  currentTime + timeToLeaveNodeFromCheckPoint);
+              final long newLowerEndPoint = currentTime;
+              final long newUpperEndPoint = currentPlan.getIntervals().get(1)
+                  .upperEndpoint();
+              final Range<Long> newSecondInterval = Range.closed(newLowerEndPoint,
+                  newUpperEndPoint);
+              currentPlan.modifyFirstAndSecondIntervals(newFirstInterval,
+                  newSecondInterval);
+              virtualEnvironment.modifyReservation(agvID,
+                  checkPoints.get(0).getResource(), newFirstInterval, RangeEndPoint.UPPER);
+              virtualEnvironment.modifyReservation(agvID,
+                  checkPoints.get(1).getResource(), newSecondInterval, RangeEndPoint.LOWER);
+            } else {
+              // if is currently at an edge
+              final long timeToLeaveEdgeFromCheckPoint = (long) ((setting
+                  .getVehicleLength() + 0.1)* 1000 / setting.getVehicleSpeed());
+              final Range<Long> newFirstInterval = Range.closed(currentPlan.getIntervals().get(0).lowerEndpoint(),
+                  currentTime + timeToLeaveEdgeFromCheckPoint);
+              
+              final long timeLeftToEnterNodeFromEdgeCheckPoint = (long) (0.1 * 1000 / setting.getVehicleSpeed());
+              final long newLowerEndPoint = currentTime + timeLeftToEnterNodeFromEdgeCheckPoint;
+              final long newUpperEndPoint = currentPlan.getIntervals().get(1)
+                  .upperEndpoint();
+              final Range<Long> newSecondInterval = Range.closed(newLowerEndPoint,
+                  newUpperEndPoint);
+              currentPlan.modifyFirstAndSecondIntervals(newFirstInterval,
+                  newSecondInterval);
+              virtualEnvironment.modifyReservation(agvID,
+                  checkPoints.get(0).getResource(), newFirstInterval, RangeEndPoint.UPPER);
+              virtualEnvironment.modifyReservation(agvID,
+                  checkPoints.get(1).getResource(), newSecondInterval, RangeEndPoint.LOWER);
+            }
+            checkPoints.removeFirst();
+          } else {
+            final long timeDifference = checkPoints.getFirst().getExpectedTime()
+                - currentTime;
+            if (timeDifference < timeLapse.getTimeLeft()) {
+              timeLapse.consume(timeDifference);
+              checkPoints.removeFirst();
+            } else if (timeDifference == timeLapse.getTimeLeft()) {
+              timeLapse.consume(timeDifference);
               checkPoints.removeFirst();
             } else {
+              // time difference is larger than time left
               timeLapse.consumeAll();
             }
-          } else {
-            // time difference is larger than time left
-            timeLapse.consumeAll();
           }
         } else {
-          // if the start time passed
-          if (isSafeToMove(false)) {
-            // if it is safe to move, mean that there is no delayed agv left
-            if (checkPoints.getFirst().getResourceType() == ResourceType.EDGE) {
-              // if the check point is an edge then move when next node is free
-              if (!roadModel.get().isOccupied(checkPoints.getFirst().getResource().get(1))) {
-                checkPoints.removeFirst();
-              } else {
-                timeLapse.consumeAll();
-              }
-            } else {
-              // if the check point is a node then move when the capacity of the next edge is not full
-              final CheckPoint checkPoint = checkPoints.get(1);
-              if (getNumOfAGVsOnEdge(checkPoint.getResource().get(0), checkPoint.getResource().get(1)) < 2) {
-                checkPoints.removeFirst();
-              } else {
-                timeLapse.consumeAll();
-              }
-            }
-            
-          } else {
-            // if it is not safe, then wait
-            timeLapse.consumeAll();
-          }
+          checkPoints.removeFirst();
         }
       }
 
@@ -206,9 +257,9 @@ public class VehicleAgent implements TickListener, MovingRoadUser {
         roadModel.get().followPath(this, path, timeLapse);
       }
     }
-
-    // count the number of reached destinations
-    if (destinations.size() > 1 && roadModel.get().getPosition(this).equals(destinations.getFirst())) {
+    
+    if (destinations.size() > 1
+        && roadModel.get().getPosition(this).equals(destinations.getFirst())) {
       reachedDestinations++;
       destinations.removeFirst();
     }
@@ -222,14 +273,42 @@ public class VehicleAgent implements TickListener, MovingRoadUser {
     return (Math.round(input * 10) / 10d);
   }
   
+  public void notifyDelay(Plan newPlan, long currentTime) {
+    currentPlan = newPlan;
+    executablePlan = new ExecutablePlan(currentPlan, setting);
+    checkPoints = new LinkedList<>(executablePlan.getCheckPoints());
+
+    while (checkPoints.getFirst().getExpectedTime() < currentTime) {
+      checkPoints.removeFirst();
+    }
+
+    virtualEnvironment.makeReservation(agvID, currentPlan, currentTime,
+        currentTime + setting.getEndTime());
+  }
+  
   /**
-   * Checks if is safe to move to the next resource.
+   * Checks if there is no higher priority agvs that have not entered the resource (count from the timePoint downward)
    *
+   * @param timePoint the time point
+   * @param resource the resource
    * @return true, if there is no delayed agv that hasn't entered the resource
    */
-  public boolean isSafeToMove(boolean isFirstCheckPoint) {
-    return virtualEnvironment.getListOfDelayedAGVs(agvID,
-        checkPoints.getFirst().getExpectedTime(), checkPoints.get(1)).isEmpty();
+  public boolean noHigherPriorityAGVs(long timePoint, List<Point> resource) {
+    return virtualEnvironment
+        .getListOfHigherPriorityAGVs(agvID, timePoint, resource).isEmpty();
+  }
+  
+  public boolean nextResourceIsFree(CheckPoint nextCheckPoint) {
+    if (nextCheckPoint.getResourceType() == ResourceType.NODE) {
+      final Point nextNode = nextCheckPoint.getResource().get(0);
+      return !roadModel.get().isOccupied(nextNode);
+    } else {
+      if (getNumOfAGVsOnEdge(nextCheckPoint.getResource().get(0), nextCheckPoint.getResource().get(1)) < 2) {
+        return true;
+      } else {
+        return false;
+      }
+    }
   }
   
   /**
@@ -255,7 +334,23 @@ public class VehicleAgent implements TickListener, MovingRoadUser {
     return numAGVsOnEdge;
   }
   
+  public Plan getCurrentPlan() {
+    return currentPlan;
+  }
+
   @Override
-  public void afterTick(TimeLapse timeLapse) {}
+  public void afterTick(TimeLapse timeLapse) {
+    final Point currentPos = roadModel.get().getPosition(this);
+    final Point roundedPos = new Point(round(currentPos.x), round(currentPos.y));
+    
+    final long currentTime = timeLapse.getEndTime();
+    
+    if (isFreezing && roundedPos.equals(checkPoints.getFirst().getPoint())) {
+      if (!propagatedDelay) {
+        virtualEnvironment.propagateDelay(agvID, currentTime);
+        propagatedDelay = true;
+      }
+    }
+  }
 
 }
